// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`submissionPageReducer handle the submit form action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
}
`;

exports[`submissionPageReducer handle the submit form error action 1`] = `
Immutable.Map {
  "loading": false,
  "error": Immutable.Map {},
}
`;

exports[`submissionPageReducer handle the submit form success action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
}
`;

exports[`submissionPageReducer returns the initial state 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
}
`;
